[tool.poetry]
name = "python3"
version = "0.1.0"
description = "Personal Python 3 environment managed by Poetry"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
astropy = "^4.0"
astroquery = "^0.3.10"
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.11.1"
jupyter = "^1.0.0"
jupyterlab = "^1.2.5"
matplotlib = "^3.1.2"
netcdf4 = "^1.5.3"
ndradex = "^0.2.0"
numba = "^0.47.0"
numpy = "^1.18.1"
pandas = "^0.25.3"
pytest = "^5.2"
pyyaml = "^5.3"
scikit-image = "^0.16.2"
scikit-learn = "^0.22.1"
scipy = "^1.4.1"
toml = "^0.10.0"
tqdm = "^4.41.1"
xarray = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
