[tool.poetry]
name = "python3"
version = "0.1.0"
description = "Global Python 3 environment managed by Poetry"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
astropy = "^4.2"
astroquery = "^0.4"
azely = "^0.6"
dask = "^2021.4"
jupyter-io = "^0.2"
matplotlib = "^3.4"
netcdf4 = "^1.5"
numba = "^0.53"
numpy = "^1.20"
pandas = "^1.2"
python-dateutil = "^2.8"
pyyaml = "^5.4"
scikit-image = "^0.18"
scikit-learn = "^0.24"
scipy = "^1.6"
toml = "^0.10"
tqdm = "^4.60"
typing-extensions = "^3.10"
xarray = "^0.16"
xarray-dataclasses = "^0.3"
zarr = "^2.8"

[tool.poetry.dev-dependencies]
black = "^21.4b"
flake8 = "^3.9"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
